--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -10,6 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hk.ust.cse.hunkim.questionroom.JoinActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Join a Room"
+        android:id="@+id/textView"
+        android:textAlignment="center" />
+
     <AutoCompleteTextView
         android:id="@+id/room_name"
         android:layout_width="match_parent"
@@ -17,7 +25,8 @@
         android:hint="@string/prompt_room_name"
         android:inputType="textShortMessage"
         android:maxLines="1"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:paddingTop="30dp"/>
 
     <Button
         android:id="@+id/join_button"
@@ -27,7 +36,14 @@
         android:layout_marginTop="16dp"
         android:onClick="attemptJoin"
         android:text="@string/action_join"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="#fdfdfd" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/List2View"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
 
