--- a/app/src/main/res/layout/joinroomsuggestion.xml
+++ b/app/src/main/res/layout/joinroomsuggestion.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="115dp"
-        android:text="New Button"
+        style="?android:attr/borderlessButtonStyle"
         android:id="@+id/suggestionRoom"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:onClick="attemptJoin"
-        android:layout_weight="0.25" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="One"
+        android:textColor="#fff"
+        android:background="@drawable/button_selector">
+    </Button>
+
+    <Button
+        style="?android:attr/borderlessButtonStyle"
+        android:id="@+id/suggestionRoom2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Two"
+        android:textColor="#fff"
+        android:background="@drawable/button_selector"
+        android:layout_marginLeft="20dp">
+    </Button>
     
 </LinearLayout>
