Add upload picture to AWS
Only picture uploading. Take a note that to make it work, there will be
some steps required
1. Add AWS SDK to your android studio
http://docs.aws.amazon.com/mobile/sdkforandroid/developerguide/setup.htm
l

2. Setup virtual disk
http://developer.android.com/tools/devices/managing-avds.html. This
steps is to allow emulator to read the virtual SD card content. You can
push some images to the virtual using command line “adb push”

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,12 @@
             android:singleLine="true" />
 
         <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/uploadImage"
+            android:src="@drawable/abc_btn_radio_to_on_mtrl_015" />
+
+        <ImageButton
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
