Added display picture
Layout will be set later. Upload function has been implemented.
The user must key in some text first and then click upload button to
send the message and picture.
Added additional checking for inputting message, doesn’t allow user to
type “<img”

--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -22,6 +22,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/img_desc"
+            android:layout_marginLeft="5dp"/>
+
         <TextView
             android:id="@+id/head_desc"
             android:layout_width="wrap_content"
