--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -3,41 +3,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/echo"
-        android:drawableLeft="@drawable/like24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/head_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="Batang"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:typeface="normal"
+        android:enabled="false"
+        android:textColor="#000000" />
 
-    <Button
-        android:id="@+id/minecho"
-        android:drawableLeft="@drawable/dislike24"
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/img_desc"
+        android:layout_marginLeft="5dp"/>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_gravity="left">
 
-        <ImageView
+        <Button
+            android:id="@+id/replyecho"
+            style="?android:attr/borderlessButtonStyle"
+            android:drawableLeft="@drawable/replyhollowcolor"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/img_desc"
-            android:layout_marginLeft="5dp"/>
+            android:layout_height="match_parent"
+            android:gravity="center" />
+
+        <Button
+            android:id="@+id/echo"
+            android:drawableLeft="@drawable/upvotehollowcolor"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center" />
+
+        <Button
+            android:id="@+id/minecho"
+            style="?android:attr/borderlessButtonStyle"
+            android:drawableLeft="@drawable/downvotehollowcolor"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center" />
 
         <TextView
-            android:id="@+id/head_desc"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/timestamp" />
+            android:layout_height="match_parent"
+            android:id="@+id/timestamp"
+            android:fontFamily="Batang"
+            android:typeface="normal"
+            android:textSize="11sp"
+            android:textIsSelectable="false"
+            android:layout_marginLeft="5dp"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:layout_gravity="center" />
 
     </LinearLayout>
 
