Update Image Viewing
Update image viewing to accommodate new field “image” on the data
structure

--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -18,7 +18,7 @@
         android:textColor="#000000" />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/img_desc"
         android:layout_marginLeft="5dp"/>
