--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/img_desc"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 
     <LinearLayout
         android:orientation="horizontal"
