Fix Timestamp Missing UI

--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -34,7 +34,8 @@
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dp"
-        android:layout_gravity="left">
+        android:layout_gravity="left"
+        android:layout_weight="1">
 
 
         <Button
@@ -43,15 +44,17 @@
             android:drawableLeft="@drawable/replyhollowcolor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_weight="0.5" />
 
         <Button
             android:id="@+id/button1"
             android:drawableLeft="@drawable/more"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="0.5" />
 
         <Button
             android:id="@+id/echo"
@@ -59,7 +62,8 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_weight="0.5" />
 
         <Button
             android:id="@+id/minecho"
@@ -67,10 +71,11 @@
             android:drawableLeft="@drawable/downvotehollowcolor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_weight="0.5" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/timestamp"
             android:fontFamily="Batang"
