--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/close"
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -19,22 +19,21 @@
         <ImageButton
             android:id="@+id/closeButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:onClick="Close"
             android:src="@drawable/previous"
             android:background="@drawable/button_selector"
             android:layout_gravity="top|left"
-            android:layout_weight="0.05"
             style="?android:attr/borderlessButtonStyle"
             android:foregroundGravity="center_vertical|center" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Room Name"
             android:id="@+id/roomname_View"
-            android:layout_weight="1"
+            android:layout_weight="0.95"
             android:textColor="#fff"
             android:autoText="false"
             android:gravity="center"
@@ -43,7 +42,10 @@
         <Spinner style="@style/SpinnerAsEditText"
             android:id="@+id/dynamic_spinner"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical"
+            android:singleLine="true"
             android:background="#FFC700" />
 
     </LinearLayout>
@@ -61,7 +63,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-	android:background="#FFC700"
+        android:background="#FFC700"
         android:orientation="horizontal">
 
         <EditText
