Show message when subscription recorded

--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -4,4 +4,8 @@
         android:id="@+id/one"
         android:title="Subscribe"/>
 
+    <item
+        android:id="@+id/two"
+        android:title="Unsubscribe"/>
+
 </menu>
